[package]
name = "tw-econ"
version = "0.4.4"
authors = ["Vlad <gerdoexx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["teeworlds", "console"]
categories = ["command-line-interface", "api-bindings"]
repository = "https://github.com/gerdoe-jr/tw-econ"
description = "Simple Rust library to use Teeworlds external console"

[dependencies]
sscanf = "0.1.1"
chrono = "0.4.19"
structopt = "0.3.21"
futures = "0.3.15"
thiserror = "1.0.30"

[dependencies.tokio]
version = "1.6.1"
features = ["io-util", "net", "rt", "sync", "macros", "rt-multi-thread"]