[package]
name = "tw-econ"
version = "0.9.0"
authors = ["Vlad <gerdoexx@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["teeworlds", "console"]
categories = ["command-line-interface", "api-bindings"]
repository = "https://github.com/gerdoe-jr/tw-econ"
description = "Simple Rust library to use Teeworlds external console"
